# torch-scf

./: CMakeLists.txt  README.md  Si-sto-3g.txt  gamma.hpp  integrals.cpp  integrals.hpp  integrals.py  test.cpp  test.py  test2.py
